# voice-agent-notes

./: .env.example  .gitignore  README.md  main.py  notes_assistant.py  pyproject.toml  realtime_voice_assistant.py  voice_assistant.py
instructions/: elementary_math_instruction.py  realtime_voice_instruction.py  voice_notes_instruction.py
